# ai-review-bot

./: .gitignore  AGENTS.md  Dockerfile  Makefile  PLAN.md  README.md  TECH_SPEC.md  TODO.md  entrypoint.py  main.py  pyproject.toml
.github/workflows/: docker-build.yml
src/ai_review_bot/: __init__.py  cli.py  llm.py  prompt.py  review.py  review_controller.py  review_service.py
src/ai_review_bot/controller/: __init__.py  review.py
src/ai_review_bot/domain/: __init__.py  prompt.py
src/ai_review_bot/entity/: __init__.py  review.py
src/ai_review_bot/service/: __init__.py  review_service.py
src/ai_review_bot/support/: __init__.py  asana.py  gitlab.py  llm.py
tests/: conftest.py  test_github_workflow.py  test_prompt.py  test_prompt_with_ticket_context.py  test_review_service.py  test_support_asana.py  test_support_gitlab.py  test_support_llm.py
