[project]
name = "ai-review-bot"
version = "0.1.0"
description = "Clean architecture 기반 AI 코드 리뷰 봇"
readme = "AGENTS.md"
requires-python = ">=3.11"
dependencies = [
  "openai>=1.43",
  "requests",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "pytest-cov>=5.0",
  "ruff>=0.5",
]

[project.scripts]
ai-review-bot = "ai_review_bot.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["ai_review_bot*"]

[tool.ruff]
target-version = "py311"
line-length = 180

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
ignore = []

[tool.pytest.ini_options]
addopts = "--strict-config --strict-markers"
testpaths = ["tests"]
